Fixing too long post titles #2

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1514,6 +1514,7 @@ input[type=search] {
 .postbar {
   white-space: nowrap;
   min-height: 70px;
+  padding-right: 110px;
 }
 
 .postbar * {
